# Workshop-backend-em-python

./: .gitignore  Cadastrar.css  Cadastrar.html  Cadastrar.js  Entrar.html  Petiano.html  README.md  pyproject.toml  requirements.txt
backend/: app.db  crud.py  database.py  main.py  models.py  schemas.py
frontend/: Cadastrar.html  Dashboard.html  Entrar.html  Entrar.js  Petiano.js  editar.html  index.html  novo.html
