[tool.poetry]
name = "workshop backend python dia 3"
version = "0.1.0"
description = "eh apenas o projeto de um crud simples"
authors = ["Aaahhv <aaahhv2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
